Fix video sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -589,10 +589,10 @@ figure .crdd, .crdd .myImg, .crdd figcaption {
 		margin: 20px 0 0 0;
 	}
 
-	.project video {
+	/*.project video {
 		width: 100%;
 		height: 100%;
-	}
+	}*/
 
 	figcaption {
 		font-size: 14pt;
